--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.6",
     "@mui/material": "^6.1.6",
+    "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-multi-carousel": "^2.8.5",
+    "react-slick": "^0.30.2",
     "sweetalert2": "^11.14.4"
   },
   "devDependencies": {
