--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-multi-carousel": "^2.8.5",
+    "react-router-dom": "^6.28.0",
     "react-slick": "^0.30.2",
     "sweetalert2": "^11.14.4"
   },
